# csde_reproducibility

./: .gitignore  LICENSE  README.md  annotate_colon1.ipynb  annotate_colon2.ipynb  annotate_lung1.ipynb  annotate_lung2.ipynb  download_images_colon1.sh  download_images_colon2.sh  download_images_lung1.sh  download_images_lung2.sh  export_data.ipynb  ffpe_colon1.sh  ffpe_colon2.sh  ffpe_lung1.sh  ffpe_lung2.sh  preprocess_colon1_adata.sh  preprocess_colon2_adata.sh  preprocess_colon_adata.sh  preprocess_data.py  preprocess_lung1_adata.sh  preprocess_lung2_adata.sh  preprocess_lung_adata.sh  proseg_colon1.sh  proseg_colon2.sh  proseg_lung1.sh  proseg_lung2.sh
spatial-correction/: .gitignore  README.md  pyproject.toml
spatial-correction/spatial_correction/baselines/: __init__.py  statistical_tests.py
spatial-correction/spatial_correction/datanavigation/: __init__.py  merfish_datanavigator.py
spatial-correction/spatial_correction/ppi/: __init__.py  _discintercept.py  _ldanbintercept.py  _ldapoisson.py  _ldapoissonintercept.py  _template.py  _utils.py
spatial-correction/workflow/: Snakefile
spatial-correction/workflow/scripts/: colocalization_experiment.py  synthetic_experiment.py
workflow/: Snakefile  ffpe-assign-transcripts-to-cells.py
workflow/scripts/: benchmark_utils.py  colocalization_experiment.py  import_annotations.py  t_cell_subset_experiment.py
