[tool.poetry]
name = "spatial-correction"
version = "0.1.0"
description = ""
authors = ["Pierre Boyeau <pierre.boyeau@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scanpy = "^1.9.1"
jax = {version = ">=0.4.30", extras = ["cuda12"]}
plotnine = "^0.12"
flake8 = {version = ">=3.7.7"}
black = {version = "^22.12c.0"}
pytest = {version = "^7.2.1"}
pre-commit = {version = "^3.0.2"}
isort = {version = "==5.11.5"}
jupyterlab = {version = "^4.0"}
flax = "^0.10.1"
numpyro = "^0.15.3"
jaxopt = "^0.8.3"
cellpose = "^3.1.0"
plotly = "^5.24.1"
shapely = "^2.0.6"
scvi-tools = "^1.2.0"
jupyter = "^1.1.1"
pyarrow = "^18.1.0"
parquet = "^1.3.1"
igraph = "^0.11.8"
geojson = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
